# MMATS

./: .env.example  .gitignore  README.md  pyproject.toml
docs/PRS/: Analysis.txt  PRS-Chatgpt.txt  PRS-Claude.txt  PRS-Deepseek.txt  PRS-Gemini.txt  PRS-Kimi.txt  PRS-Shoky.txt  TPQA-Chatgpt.txt  TPQA-Deepseek.txt  TPQA-Gemini.txt  TPQA-Kimi.txt
docs/product_info/ENG/: ai_llm_integration.md  architecture_overview.md  backtesting_and_simulation.md  multi_market_operations.md  risk_management.md  security_and_compliance.md  trading_concepts.md  ui_and_user_experience.md
docs/product_info/ES/: ai_llm_integration.md  architecture_overview.md  backtesting_and_simulation.md  multi_market_operations.md  risk_management.md  security_and_compliance.md  trading_concepts.md  ui_and_user_experience.md
docs/prompt/: MasterPrompt.md  StepbyStep.md
examples/: run_backtest.py
src/: __init__.py  main.py
src/application/: __init__.py  backtest_engine.py
src/application/modes/: __init__.py
src/domain/: __init__.py
src/domain/models/: __init__.py  enums.py  market_data.py  order.py  position.py  signal.py  strategy_context.py
src/domain/ports/: __init__.py  execution_provider.py  market_data_provider.py  strategy.py
src/domain/services/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py
src/infrastructure/adapters/execution/: __init__.py  simulated_adapter.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/logging/: __init__.py  logger.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py
src/strategies/: __init__.py
src/strategies/examples/: __init__.py  sma_crossover.py
tests/: __init__.py  conftest.py
tests/integration/: test_backtest_engine.py  test_execution_adapters.py  test_market_data_adapters.py
tests/unit/: test_settings.py
tests/unit/domain/: __init__.py  test_enums.py  test_models.py
(+4 files in other folders)
